--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,11 +18,11 @@
 \Reftrue
 \Toctrue
 
-\iffalse
+\iftrue
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1cm
 \else
-	\def\FootText{(VERSION 7)}
+	\def\FootText{(VERSION 8)}
 \fi
 
 \def\pmt#1{{\tt #1}}
