--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -165,14 +165,9 @@ That corresponds to the background contribution ``after the acceptance correctio
 
 We have evaluated the integral \Eq{felm bckg el t dist} with the aid of MC techniques (see the blue histograms in \Fg{felm background cmp}). We have found that the resulting distributions can well be parameterized as:
 \eqref{{\d N_{\rm B, el}\over \d t} = a \e^{b t + c t^2}}{felm bckg el t dist param}
-at the parts not affected by the acceptance (see the red solid lines in \Fg{felm background cmp}). In fact, we have made a number of MC simulations. We have taken the mean $h_{\rm 1p}$ parameters from \Tb{felm fit} and varied them within their uncertainties. We have done the same for the background integral $N_{\rm B}$ from \Tb{felm bckg int result}. This has led to the $\d N_{\rm B,el}/\d t$ uncertainties which are drawn as red dashed lines in \Fg{felm background cmp}. The mean fit parameters $a$, $b$ and $c$ with their uncertainties are summarized in \Tb{felm bckg results}.
+at the parts not affected by the acceptance (see the red solid lines in \Fg{felm background cmp}). In fact, we have made a number of MC simulations. We have taken the mean $h_{\rm 1p}$ parameters from \Tb{felm fit} and varied them within their uncertainties. We have done the same for the background integral $N_{\rm B}$ from \Tb{felm bckg int result}. This has led to the $\d N_{\rm B,el}/\d t$ uncertainty bands which are drawn as red dashed lines in \Fg{felm background cmp}. The mean fit parameters $a$, $b$ and $c$ with their uncertainties are summarized in \Tb{felm bckg results}.
 
-% both for the diagonal 45b - 56t
-% blue: dN_B/dt simulation
-% red: fit with parameterization \Eq{felm bckg el t dist param}
-% dashed red: 1\si error contours calcualted from the uncertainties of b_x, b_y and N_B
-% black: dN/dt for signal+background
-\fig{fig/pdf/felm_background_cmp.pdf}{felm background cmp}{\TODO{}}
+\fig{fig/pdf/felm_background_cmp.pdf}{felm background cmp}{Background-signal comparisons for the diagonal 45 bottom - 56 top. Left: before, Right: after the acceptance correction. The blue histograms are the $\d N_{\rm B, el}/\d t$ simulations with mean $h_{1p}$ and $N_{\rm B}$ parameters. The red lines represent their fits with the parameterization \Eq{felm bckg el t dist param}. The dashed red lines delimit $1\si$ error bands of the background (red) curves. The black histograms correspond to signal+background, i.e.~to all events that have passed the selection cuts.}
 
 
 \tab{felm bckg results}{The background contribution to the elastic $t$-distribution (after the acceptance correction) parameterized as \Eq{felm bckg el t dist param}.}{
@@ -185,7 +180,7 @@ b\ \rm (GeV^{-2}) & 6.9 \pm 0.6 & 6.9 \pm 0.6 \cr\ln
 c\ \rm (GeV^{-4}) & 0.4 \pm 0.1 & 0.4 \pm 0.1 \cr\bln
 }
 
-\TODO{a summary -- link to the next step?}
+Taking the data from \Fg{felm background cmp} right, one can subtract the background (red) from signal+background (black), leading to an acceptance-corrected $t$-distribution. This distribution then enters the next step -- the unfolding.
 
 
 \section[felm unfold]{Unfolding}
@@ -278,5 +273,3 @@ The correction functions (compatible with the definition \Eq{felm unf fm sm corr
 The fit-based and bin-based methods are compared in \Fg{felm unfolding m1m2 cmp}. Despite the large fluctuation of the bin-based result, a very good match is evident. The discrepancy at low $\th$ values is practically irrelevant because it falls below the analysis cut (drawn as the dashed line). Generally speaking we trust more the fit-based result, we consider the bin-based method rather as a reassuring cross-check.
 
 \fig{fig/pdf/felm_unfolding_m1m2_cmp.pdf}{felm unfolding m1m2 cmp}{A comparison of the fit-based and bin-based method (for diagonal 45 top -- 56 bottom and with $\si(\De\th) = 12\un{\mu rad}$).}
-
-\TODO{a summary -- link to the next step?}
