ttm intro started
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4959 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -1,11 +1,8 @@
 \SpecialChapter{Introduction}
 
-\> General introduction
-\> {\bf motivation} for what I study.
+\> something about forward processes (notably elastic scattering), how interesting they are, related to the structure of the proton
 
-\> something about CERN, LHC as introduction for TOTEM
-
-
+\> these forward process will be measured by TOTEM (see \Sc{ttm}), an experiment at LHC at CERN. Few lines about CERN and LHC.
 
 \> typographical conventions
 
