--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1116,3 +1116,14 @@
 	url = "ftp://root.cern.ch/root/doc/14LinearAlgebra.pdf"
 }
 
+@article{cudell02,
+      author         = "Cudell, J.R. et al.",
+      title          = "Benchmarks for the forward observables at RHIC, the
+                        Tevatron Run II and the LHC",
+      collaboration  = "COMPETE",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "89",
+      pages          = "201801",
+      doi            = "10.1103/PhysRevLett.89.201801",
+      year           = "2002",
+}
